--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,17 @@
-server.port=8880	
-
+server.port=8880
 #db specific properties
 spring.datasource.url=jdbc:mysql://localhost:3306/busdb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+#spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+#springdoc.api-docs.path = /busapi-openapi
+
+#logging.level.root=DEBUG
+
+
